// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders - currency 1`] = `
<div
  class="sc-beySPh kknHUq sc-iBdnpw hObaGP"
>
  <label
    class="sc-beySPh cuSjOj sc-eDLKkx iyKPwv"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class="sc-beySPh kknHUq"
  >
    <div
      class="sc-beySPh dxKTfv"
    >
      <input
        class="sc-fsYfdN bmfEOR"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="10"
        type="number"
        value="50"
      />
      <div
        class="sc-kFCroH gpvqmy"
      >
        <button
          class="sc-irLvIq jOcjzK"
        >
          <span
            class="sc-beySPh kknHUq sc-dmyCSP extVns"
            color="sesame"
            rotate="180"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="sc-irLvIq jOcjzK"
        >
          <span
            class="sc-beySPh kknHUq sc-dmyCSP gSmNUh"
            color="sesame"
            rotate="0"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders - disabled 1`] = `
<div
  class="sc-beySPh kknHUq sc-iBdnpw hObaGP"
>
  <label
    class="sc-beySPh cuSjOj sc-eDLKkx iyKPwv"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class="sc-beySPh kknHUq"
  >
    <div
      class="sc-beySPh dxKTfv"
    >
      <input
        class="sc-fsYfdN dceYtF"
        disabled=""
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="0"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - error 1`] = `
<div
  class="sc-beySPh kknHUq sc-iBdnpw hObaGP"
>
  <label
    class="sc-beySPh cuSjOj sc-eDLKkx cVLfJj"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class="sc-beySPh kknHUq"
  >
    <div
      class="sc-beySPh dxKTfv"
    >
      <input
        class="sc-fsYfdN fGTdKD"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="10"
        type="number"
        value="200"
      />
      <div
        class="sc-kFCroH gpvqmy"
      >
        <button
          class="sc-irLvIq jOcjzK"
        >
          <span
            class="sc-beySPh kknHUq sc-dmyCSP extVns"
            color="sesame"
            rotate="180"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="sc-irLvIq jOcjzK"
        >
          <span
            class="sc-beySPh kknHUq sc-dmyCSP gSmNUh"
            color="sesame"
            rotate="0"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <span
    class="sc-beySPh jBbmPD sc-eDLKkx fMiVAB"
    cursor="inherit"
    title=""
  >
    Oh gosh, this is an error isn't it!
  </span>
</div>
`;

exports[`renders - number 1`] = `
<div
  class="sc-beySPh kknHUq sc-iBdnpw hObaGP"
>
  <label
    class="sc-beySPh cuSjOj sc-eDLKkx iyKPwv"
    cursor="inherit"
    for="numberInput"
    title=""
  >
    Number
    <span
      class="sc-beySPh kknHUq sc-eDLKkx grDtvC"
      cursor="inherit"
      title=""
    >
      *
    </span>
  </label>
  <div
    class="sc-beySPh kknHUq"
  >
    <div
      class="sc-beySPh dxKTfv"
    >
      <input
        class="sc-fsYfdN bmfEOR"
        id="numberInput"
        name="numberInput"
        placeholder="0.00"
        step="0"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - with suffix 1`] = `
<div
  class="sc-beySPh kknHUq sc-iBdnpw hObaGP"
>
  <label
    class="sc-beySPh cuSjOj sc-eDLKkx iyKPwv"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class="sc-beySPh kknHUq"
  >
    <div
      class="sc-beySPh dxKTfv"
    >
      <input
        class="sc-fsYfdN bmfEOR"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="0"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - with trailing icon 1`] = `
<div
  class="sc-beySPh kknHUq sc-iBdnpw hObaGP"
>
  <label
    class="sc-beySPh cuSjOj sc-eDLKkx iyKPwv"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class="sc-beySPh kknHUq"
  >
    <div
      class="sc-beySPh dxKTfv"
    >
      <input
        class="sc-fsYfdN bmfEOR"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        step="0"
        type="number"
        value=""
      />
      <span
        class="sc-beySPh kknHUq sc-dmyCSP gSmNUh sc-jsEeTM bJpXLa"
        color="sesame"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10a1 1 0 100-2c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8c0 1.103-.897 2-2 2s-2-.897-2-2c0-2.206-1.794-4-4-4s-4 1.794-4 4 1.794 4 4 4c1.2 0 2.266-.542 3-1.382.734.84 1.8 1.382 3 1.382 2.206 0 4-1.794 4-4 0-5.514-4.486-10-10-10zm0 12c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
